Some config changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,11 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Build the ROM
 set(EMERALD_ROM "${CMAKE_SOURCE_DIR}/emerald/pokeemerald.gba")
-add_custom_command(
-    OUTPUT ${EMERALD_ROM}
-    COMMAND make rom
+add_custom_target(
+    emerald ALL
+    COMMAND make -j32 rom
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/emerald
     COMMENT "Building the ROM"
+    USES_TERMINAL
     VERBATIM
 )
-add_custom_target(emerald ALL DEPENDS ${EMERALD_ROM})
