Better starter shuffling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,16 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Build the ROM
 set(EMERALD_ROM "${CMAKE_SOURCE_DIR}/emerald/pokeemerald.gba")
+set(EMERALD_SYM "${CMAKE_SOURCE_DIR}/emerald/pokeemerald.sym")
+
 add_custom_target(
-    emerald ALL
-    COMMAND make -j32 rom
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/emerald
-    COMMENT "Building the ROM"
-    USES_TERMINAL
-    VERBATIM
+  emerald ALL
+  COMMAND make -j32 rom
+  BYPRODUCTS ${EMERALD_ROM} ${EMERALD_SYM}
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/emerald
+  COMMENT "Building the ROM"
+  USES_TERMINAL
+  VERBATIM
 )
 
 add_custom_target(data ALL)
@@ -26,7 +29,7 @@ function(build_lang lang)
   add_custom_command(
     OUTPUT ${TARGET_OUTPUT}
     COMMAND python3 ${CMAKE_SOURCE_DIR}/scripts/make_lang.py ${lang}
-    DEPENDS emerald ${LANG_SOURCES} ${CMAKE_SOURCE_DIR}/scripts/make_lang.py
+    DEPENDS ${EMERALD_SYM} ${LANG_SOURCES} ${CMAKE_SOURCE_DIR}/scripts/make_lang.py
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     COMMENT "Building ${lang} data"
     VERBATIM
@@ -45,7 +48,7 @@ set(OFFSETS_FILE "${CMAKE_BINARY_DIR}/data/offsets.bin")
 add_custom_command(
   OUTPUT ${OFFSETS_FILE}
   COMMAND python3 ${CMAKE_SOURCE_DIR}/scripts/make_offsets.py
-  DEPENDS emerald ${CMAKE_SOURCE_DIR}/scripts/make_offsets.py
+  DEPENDS ${EMERALD_SYM} ${CMAKE_SOURCE_DIR}/scripts/make_offsets.py
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
   COMMENT "Building offsets"
   VERBATIM
