--- a/emerald/Makefile
+++ b/emerald/Makefile
@@ -339,7 +339,6 @@ $(CRY_SUBDIR)/uncomp_%.bin: $(CRY_SUBDIR)/uncomp_%.aif ; $(AIF) $< $@
 $(CRY_SUBDIR)/%.bin: $(CRY_SUBDIR)/%.aif ; $(AIF) $< $@ --compress
 sound/%.bin: sound/%.aif ; $(AIF) $< $@
 
-
 ifeq ($(MODERN),0)
 $(C_BUILDDIR)/libc.o: CC1 := tools/agbcc/bin/old_agbcc$(EXE)
 $(C_BUILDDIR)/libc.o: CFLAGS := -O2
@@ -527,6 +526,10 @@ check: $(TESTELF)
 
 $(LIBAGBSYSCALL): FORCE
 	@$(MAKE) -C libagbsyscall TOOLCHAIN=$(TOOLCHAIN) MODERN=$(MODERN)
+
+# Buggy for some reason
+src/data/map_group_count.h:
+	touch $@
 
 FORCE: ;
 
