--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,26 +2,61 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Emerald-EM)
 
+find_package(Python3 REQUIRED)
+
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++17")
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(USE_DOCKER_DEFAULT OFF)
 
-# Build the ROM
+if (NOT MSVC)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++17")
+else()
+  set(USE_DOCKER_DEFAULT ON)
+endif()
+
+option(USE_DOCKER "" "${USE_DOCKER_DEFAULT}")
+
+set(BASEROM_STAMP "${CMAKE_BINARY_DIR}/baserom.stamp")
 set(EMERALD_ROM "${CMAKE_SOURCE_DIR}/emerald/pokeemerald.gba")
 set(EMERALD_SYM "${CMAKE_SOURCE_DIR}/emerald/pokeemerald.sym")
-set(DATA_FILES "")
 
-add_custom_target(
-  emerald ALL
-  COMMAND make -j32 rom
-  BYPRODUCTS ${EMERALD_ROM} ${EMERALD_SYM}
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/emerald
-  COMMENT "Building the ROM"
-  USES_TERMINAL
-  VERBATIM
-)
+if (USE_DOCKER)
+  file(GLOB_RECURSE BASEROM_SOURCES "${CMAKE_SOURCE_DIR}/emerald/*")
+  add_custom_command(
+    OUTPUT "${BASEROM_STAMP}"
+    COMMAND docker build . -t emerald-em-builder
+    COMMAND docker run --rm -v "${CMAKE_SOURCE_DIR}/emerald:/emerald" emerald-em-builder make -j32 rom
+    COMMAND "${CMAKE_COMMAND}" -E touch "${BASEROM_STAMP}"
+    BYPRODUCTS ${EMERALD_ROM} ${EMERALD_SYM}
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    COMMENT "Building the ROM (using docker)"
+    DEPENDS ${BASEROM_SOURCES}
+    USES_TERMINAL
+    VERBATIM
+  )
+  add_custom_target(emerald DEPENDS "${BASEROM_STAMP}")
+else()
+  file(GLOB_RECURSE BASEROM_SOURCES "${CMAKE_SOURCE_DIR}/emerald/*")
+  add_custom_command(
+    OUTPUT "${BASEROM_STAMP}"
+    COMMAND make -j32 rom
+    COMMAND "${CMAKE_COMMAND}" -E touch "${BASEROM_STAMP}"
+    BYPRODUCTS ${EMERALD_ROM} ${EMERALD_SYM}
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/emerald
+    COMMENT "Building the ROM"
+    USES_TERMINAL
+    VERBATIM
+  )
+  add_custom_target(emerald DEPENDS "${BASEROM_STAMP}")
+endif()
+
+# Build the ROM
+set(DATA_FILES "")
 
 macro(build_lang lang)
   file(GLOB_RECURSE _lang_sources "${CMAKE_SOURCE_DIR}/data/text/${lang}/*.txt")
@@ -29,8 +64,8 @@ macro(build_lang lang)
 
   add_custom_command(
     OUTPUT ${_lang_output}
-    COMMAND python3 ${CMAKE_SOURCE_DIR}/scripts/make_lang.py ${lang}
-    DEPENDS ${EMERALD_SYM} ${_lang_sources} ${CMAKE_SOURCE_DIR}/scripts/make_lang.py
+    COMMAND "${Python3_EXECUTABLE}" ${CMAKE_SOURCE_DIR}/scripts/make_lang.py ${lang}
+    DEPENDS emerald ${_lang_sources} ${CMAKE_SOURCE_DIR}/scripts/make_lang.py
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     COMMENT "Building ${lang} data"
     VERBATIM
@@ -45,8 +80,8 @@ build_lang("fr_FR")
 set(OFFSETS_FILE "${CMAKE_BINARY_DIR}/data/offsets.bin")
 add_custom_command(
   OUTPUT ${OFFSETS_FILE}
-  COMMAND python3 ${CMAKE_SOURCE_DIR}/scripts/make_offsets.py
-  DEPENDS ${EMERALD_SYM} ${CMAKE_SOURCE_DIR}/scripts/make_offsets.py
+  COMMAND "${Python3_EXECUTABLE}" ${CMAKE_SOURCE_DIR}/scripts/make_offsets.py
+  DEPENDS emerald ${CMAKE_SOURCE_DIR}/scripts/make_offsets.py
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
   COMMENT "Building offsets"
   VERBATIM
@@ -59,9 +94,15 @@ add_subdirectory(src)
 # Copy data
 add_custom_target(
   data ALL
-  DEPENDS ${DATA_FILES} ${EMERALD_ROM}
+  DEPENDS emerald ${DATA_FILES}
   COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_BINARY_DIR}/data ${CMAKE_BINARY_DIR}/bin/data
   COMMAND ${CMAKE_COMMAND} -E copy ${EMERALD_ROM} ${CMAKE_BINARY_DIR}/bin/emerald-em.gba
   COMMENT "Copying data files"
   VERBATIM
 )
+
+install(TARGETS shuffler DESTINATION .)
+install(FILES $<TARGET_RUNTIME_DLLS:shuffler> DESTINATION .)
+install(DIRECTORY ${CMAKE_BINARY_DIR}/data DESTINATION .)
+set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION .)
+include(InstallRequiredSystemLibraries)
