--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install system dependencies
-        run: sudo apt-get install cmake ninja-build gcc-arm-none-eabi
+        run: sudo apt-get install cmake ninja-build gcc-arm-none-eabi libpng-dev
 
       - name: Fetch ENC
         run: |
