--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           path: build/data
   gui-win64:
     runs-on: windows-latest
+    needs: [data]
     steps:
       - uses: actions/checkout@v4
         with:
