--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Build GUI
         run: |
-          cmake .. -A x64 -DEXTERNAL_DATA=${GITHUB_WORKSPACE}/data_prebuilt
+          cmake .. -A x64 -DEXTERNAL_DATA=${{ env.GITHUB_WORKSPACE }}/data_prebuilt
           cmake --build . --config Release
-          cmake --install . --config Release --prefix $GITHUB_WORKSPACE/tree
+          cmake --install . --config Release --prefix ${{ env.GITHUB_WORKSPACE }}/tree
         working-directory: ./build
