--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: data
-          path: $GITHUB_WORKSPACE/data_prebuilt
+          path: ${{ github.workspace }}/data_prebuilt
 
       - name: Setup build
         run: |
@@ -60,7 +60,7 @@ jobs:
 
       - name: Build GUI
         run: |
-          cmake .. -A x64 -DEXTERNAL_DATA=${{ github.workspace }}\data_prebuilt -DBUILD_GUI=ON
+          cmake .. -A x64 -DEXTERNAL_DATA=${{ github.workspace }}/data_prebuilt -DBUILD_GUI=ON
           cmake --build . --config Release
           cmake --install . --config Release --prefix ${{ github.workspace }}\tree
         working-directory: ./build
