Fix external data CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,11 @@ if (WIN32)
   install(TARGETS shuffler-gui DESTINATION .)
   install(FILES $<TARGET_RUNTIME_DLLS:shuffler-cli> DESTINATION .)
   install(FILES $<TARGET_RUNTIME_DLLS:shuffler-gui> DESTINATION .)
-  install(DIRECTORY ${CMAKE_BINARY_DIR}/data DESTINATION .)
+  if (EXTERNAL_DATA)
+    install(FILES ${EXTERNAL_DATA} DESTINATION ./data)
+  else()
+    install(DIRECTORY ${CMAKE_BINARY_DIR}/data DESTINATION .)
+  endif()
   set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION .)
   include(InstallRequiredSystemLibraries)
 endif()
