--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,7 @@ if (WIN32)
   install(FILES $<TARGET_RUNTIME_DLLS:shuffler-cli> DESTINATION .)
   install(FILES $<TARGET_RUNTIME_DLLS:shuffler-gui> DESTINATION .)
   if (EXTERNAL_DATA)
-    install(FILES ${EXTERNAL_DATA} DESTINATION ./data)
+    install(DIRECTORY ${EXTERNAL_DATA}/ DESTINATION ./data)
   else()
     install(DIRECTORY ${CMAKE_BINARY_DIR}/data DESTINATION .)
   endif()
