--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Emerald-EM)
 
+set(VERSION_MAJOR 0)
+set(VERSION_MINOR 4)
+set(VERSION_PATCH 0)
+set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
+
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
@@ -145,3 +150,23 @@ if (WIN32)
   set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION .)
   include(InstallRequiredSystemLibraries)
 endif()
+
+# CPack
+set(CPACK_PACKAGE_NAME "Emerald-EM")
+set(CPACK_PACKAGE_VENDOR "Maxime Bacoux")
+set(CPACK_PACKAGE_CONTACT "Maxime Bacoux")
+set(CPACK_PACKAGE_VERSION_MAJOR ${VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${VERSION_PATCH})
+set(CPACK_PACKAGE_DIRECTORY "${CMAKE_BINARY_DIR}/pkg")
+
+if (WIN32)
+    set(CPACK_GENERATOR "ZIP")
+elseif(APPLE)
+    set(CPACK_GENERATOR "DragNDrop")
+    set(CPACK_SYSTEM_NAME "mac")
+elseif(UNIX)
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6, libgcc1, libstdc++6")
+    set(CPACK_GENERATOR "DEB")
+endif()
+include(CPack)
